0.24.8	UNRELEASED

0.24.7	2025-10-23

 * Add sparse index support for improved performance with large repositories.
   Implements reading and writing of sparse directory entries, index expansion/
   collapse operations, and the 'sdir' extension.
   (Jelmer Vernooĳ, #1797)

 * Add support for core.fsyncObjectFiles configuration option.
   (Jelmer Vernooĳ, #1817)

 * Work around typing module bug in Python 3.9.0 and 3.9.1 by using string
   annotation for Callable type in reflog.py. (Jelmer Vernooĳ, #1948)

 * Fix passing ssh_command, password, and key_filename parameters to the SSH
   vendor. Regression from 0.24.2.  (Jelmer Vernooĳ, #1945)

 * Fix LFS URL validation to prevent DNS resolution errors when ``lfs.url`` is
   configured with an invalid value. Implement full support for ``file://`` URLs
   to access local LFS repositories, matching git-lfs behavior.
   (Jelmer Vernooĳ, #1951)

0.24.6	2025-10-19

 * Fix import failure when ``sys.stdin`` is ``None``. The ``dulwich.server``
   module can now be imported in environments where ``sys.stdin`` is ``None``,
   such as Windows GUI apps, apps started with ``pythonw``, or apps using
   ``ProcessPoolExecutor``. (Jelmer Vernooĳ, #1939)

 * Add support for ``dulwich reflog expire`` and ``dulwich reflog delete`` commands.
   (Jelmer Vernooĳ, #1798)

 * Add ``dulwich grep`` command.
   Supports regular expressions, case-insensitive search, line numbers, pathspec
   filtering, and respecting .gitignore patterns. (Jelmer Vernooĳ, #1776)

 * Add support for octopus merge strategy. (Jelmer Vernooĳ, #1816)

 * Add support for ``git show-branch`` command to display branches and their

 * Add ``dulwich cherry`` command to find commits not merged upstream.
   Compares commits by patch ID to identify equivalent patches regardless of
   commit metadata. Supports automatic upstream detection from tracking branches
   and verbose mode to display commit messages. (Jelmer Vernooĳ, #1782)
